[package]
name = "pnet_sys"
version = "0.25.0"
authors = ["Robert Clipsham <robert@octarineparrot.com>", "Linus Färnstrand <faern@faern.net>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/libpnet/libpnet"
repository = "https://github.com/libpnet/libpnet"
description = "Access to network related system function and calls."
keywords = ["networking", "datalink", "ethernet", "raw"]
categories = ["network-programming"]

[dependencies]
libc = "0.2.69"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [ "winsock2", "ws2ipdef" ] }
#winapi = { version = "0.3.8", features = [""] }
#winapi = { git = "https://github.com/mattlknight/winapi-rs", branch = "iphlpapi", features = ["impl-default", "in6addr", "inaddr", "minwindef", "winerror", "winsock2", "ws2def", "ws2ipdef"] }
